--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "styled-components": "^6.0.6"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
@@ -29,6 +29,7 @@
     "postcss": "^8.4.27",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6",
     "vite": "^4.4.5"
   }
 }
